--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <title>My Weather</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
